<?xml version="1.0"?>
<resources>
    <string name="app_name">ServiceNet</string>
    <string name="sign_in">Sign In</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_txt">Login</string>
    <string name="title_activity_search_provider">SearchProviderActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_group_search">Search for Providers</string>
    <string name="title_activity_servicenet">ServiceNet</string>
    <string name="nav_search_label">Provider Search</string>
    <string name="nav_service_label">Accept Requests</string>
    <string name="nav_profile_label">Profile</string>
    <string name="nav_settings_label">Settings</string>
    <string name="nav_welcome_label">Welcome</string>
    <string name="search_hint">Search for Providers</string>
    <string name="first_name">Dan</string>
    <string name="last_name">Smith</string>
    <string name="first_name_match">Dr. Kim</string>
    <string name="last_name_match">"Himler "</string>
    <string name="current_date">11/1/17</string>
    <string name="current_time">10:25 AM</string>
    <string name="user_adress">13892 Yockey St Garden Grove, CA</string>
    <string name="appointment_date">11/1/17</string>
    <string name="appointment_time">10:20 AM</string>
    <string name="fullname_match">Dr. Kim Himler</string>
    <string name="chosen_service_match">General Doctor</string>
    <string name="clickable_desc">Doctors of Garden Grove is an appointment-based health organization based in Garden Grove. We are a growing community of specialists looking to serve your needs. To ensure dependability, our doctors are screened based on user-feedback. Always a helping hand!</string>
</resources>