<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_welcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome To ServiceNet"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorAccent"
                    android:padding="8dp"
                    android:text="Favorites"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0"
                    android:background="?attr/colorPrimary"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/ic_profile_7"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Paul Tuckman"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Title"
                            android:textColor="?android:attr/textColorPrimaryInverse"/>

                        <RatingBar
                            style="@android:style/Widget.Material.RatingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:foregroundTint="?attr/colorAccent"
                            android:isIndicator="false"
                            android:numStars="5"
                            android:progressBackgroundTint="@android:color/darker_gray"
                            android:rating="4"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimary"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Barber"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/appointments_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorAccent"
                    android:padding="8dp"
                    android:text="Appointments"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>

                <LinearLayout
                    android:id="@+id/appointment_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="0dp"
                        android:background="?attr/colorPrimary"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="8dp">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/ic_profile_2"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/fullname_match"
                                android:textAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Title"
                                android:textColor="?android:attr/textColorPrimaryInverse"/>

                            <RatingBar
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:numStars="5"
                                android:progressBackgroundTint="@android:color/darker_gray"
                                android:rating="5"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?attr/colorPrimary"
                            android:padding="8dp"
                            android:text="@string/chosen_service_match"
                            android:textAppearance="@android:style/TextAppearance.Material.Body1"
                            android:textColor="?android:attr/textColorPrimaryInverse"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?attr/colorPrimary"
                            android:padding="8dp"
                            android:text="@string/appointment_date"
                            android:textAppearance="@android:style/TextAppearance.Material.Body1"
                            android:textColor="?android:attr/textColorPrimaryInverse"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="?attr/colorPrimary"
                            android:padding="8dp"
                            android:text="@string/appointment_time"
                            android:textAppearance="@android:style/TextAppearance.Material.Body1"
                            android:textColor="?android:attr/textColorPrimaryInverse"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>