<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="You've Been Matched With:"
                android:textAlignment="viewStart"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/profile_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/actionModeSplitBackground"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_profile_2"/>

                <TextView
                    android:id="@+id/tv_profile_group_name"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:text="Dr. Kit"
                    android:textAppearance="@android:style/TextAppearance.Material.Large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profile_pic"
                    app:layout_constraintTop_toTopOf="@+id/profile_pic"/>

                <TextView
                    android:id="@+id/tv_profile_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Himler "
                    android:textAppearance="@android:style/TextAppearance.Material.Large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/profile_pic"
                    app:layout_constraintTop_toBottomOf="@+id/tv_profile_group_name"/>

                <RatingBar
                    android:id="@+id/ratingBar3"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="48dp"
                    android:rating="5"
                    android:scaleX=".5"
                    android:scaleY=".5"
                    android:scrollbarAlwaysDrawHorizontalTrack="true"
                    app:layout_constraintStart_toStartOf="@+id/profile_pic"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="I am a doctor who has been practicing general medicine for 20 years. I am originally from Fountain Valley, but I moved to Garden Grove about 8 years ago after leaving Fountain Valley Hospital to be closer to my family."
                    app:layout_constraintEnd_toEndOf="@+id/tv_profile_group_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_pic"/>
            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorAccent"
                    android:padding="8dp"
                    android:text="Services Requested"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorPrimary"
                        android:padding="8dp"
                        android:text="@string/chosen_service_match"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1"
                        android:textColor="?android:attr/textColorPrimaryInverse"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorAccent"
                    android:padding="8dp"
                    android:text="Credentials / Background"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorPrimary"
                        android:padding="8dp"
                        android:text="UCLA School of Medicine, obtained MD"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1"
                        android:textColor="?android:attr/textColorPrimaryInverse"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorAccent"
                    android:padding="8dp"
                    android:text="Date and Time"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="?attr/colorPrimary"
                        android:padding="8dp"
                        android:text="Date"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1"
                        android:textColor="?android:attr/textColorPrimaryInverse"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?attr/colorPrimary"
                        android:padding="8dp"
                        android:text="@string/appointment_date"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1"
                        android:textColor="?android:attr/textColorPrimaryInverse"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="?attr/colorPrimary"
                        android:padding="8dp"
                        android:text="Time"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1"
                        android:textColor="?android:attr/textColorPrimaryInverse"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?attr/colorPrimary"
                        android:padding="8dp"
                        android:text="@string/appointment_time"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1"
                        android:textColor="?android:attr/textColorPrimaryInverse"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loc_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorAccent"
                    android:padding="8dp"
                    android:text="Location"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>

                <LinearLayout
                    android:id="@+id/loc_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/loc_text_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?attr/colorPrimary"
                        android:padding="8dp"
                        android:text="9401 Westminster Ave Garden Grove, CA"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1"
                        android:textColor="?android:attr/textColorPrimaryInverse"/>

                    <ImageButton
                        android:id="@+id/i_btn_external_map"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:background="?attr/colorAccent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@android:drawable/ic_dialog_map"
                        tools:layout_editor_absoluteY="8dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="?android:attr/actionModeSplitBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorAccent"
                    android:padding="8dp"
                    android:text="Reviews Received"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textColor="?android:attr/textColorPrimaryInverse"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorPrimary"
                        android:padding="8dp"
                        android:text="Helped me with my leg (5/5)"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1"
                        android:textColor="?android:attr/textColorPrimaryInverse"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="?attr/colorPrimary"
                        android:padding="8dp"
                        android:text="Very cool dude, great service (4/5)"
                        android:textAppearance="@android:style/TextAppearance.Material.Body1"
                        android:textColor="?android:attr/textColorPrimaryInverse"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_confirm_match"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?attr/colorAccent"
                android:text="Confirm Match"
                android:textColor="?android:attr/textColorPrimaryInverse"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>